--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,34 @@
-h1{
+body {
+    text-align: left;
+    font-family: 'Armata', Arial, sans-serif;
+    color: #5d5d5d;
+    font-weight: 400;
+}
+
+/***** newsletter *****/
+/*********************/
+
+.newsletter {
+    margin: 60px 0 40px 0;
     text-align: center;
+}
+
+.newsletter h3 {
+    font-size: 35px;
+    font-weight: 400;
+    line-height: 40px;
+    text-shadow: 1px 2px 1px #fff;
+}
+
+.newsletter p {
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 36px;
+}
+
+
+#wuf-adv {
+  display:none!important;
 }
 
 /**
